sidebar spacing fixed, jumbotron removed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,36 @@
+body{
+  background-color: #000000;
+  color: #ffffff;
+  padding: 20px;
+}
+
+a {
+  color: green;
+  text-decoration: underline;
+}
+
 .art {
-  max-width: 20%;
-  max-height: 20%
+  max-width: 30%;
+  max-height: 30%
 }
 
 .sidebar{
-  border-right: 1px solid lightblue;
+  border-right: 1px solid lightgreen;
+  border-bottom: 1px solid lightgreen;
   float:left;
+  margin-right: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  max-width: 10%;
+}
+
+.sidebar .art{
+  max-width: 150px;
+  max-height: 150px;
+  margin-bottom: 25px;
+}
+
+.container{
+  max-width: 100%;
+  margin-left: 50px;
 }
